# chesspizza

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md  simple_demo
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/shaders/: basic.frag  basic.vert
include/: difficulty_manager.h  game.h  renderer.h  theme_manager.h
src/: console_demo.cpp  difficulty_manager.cpp  game.cpp  main.cpp  objview.cpp  renderer.cpp  simple_demo.cpp  theme_manager.cpp
